# GazpreaCompiler

./: .gitignore  CMakeLists.txt  README.md
cmake/: antlr_generate.cmake  get_llvm.cmake
grammar/: Gazprea.g4  GazpreaLexer.g4
include/: AST.h  ASTBuilder.h  ASTNodes.h  ASTPass.h  CodeGenPass.h  DefRef.h  Exceptions.h  FunctionErrorPass.h  Qualifier.h  Scope.h  Symbol.h  Token.h
include/ASTNodes/: AssignStatement.h  AtomNodes.h  BinaryExpr.h  Block.h  BuiltInCall.h  ConditionStatement.h  DeclareStatement.h  DomainExpr.h  ExtraLeafNodes.h  FileNode.h  FilterExpr.h  FunctionNodes.h  GeneratorExpr.h  IdNode.h  Loop.h  ProcedureCall.h  ProcedureDecl.h  ProcedureParam.h  Stream.h  TupleType.h  TypeCast.h  TypeDef.h  TypeNode.h  UnaryExpr.h
runtime/: CMakeLists.txt
runtime/include/: errors.h
runtime/src/: CMakeLists.txt  builtin.c  casting.c  errors.c  helper.c  operation.c  stream.c
scripts/: configureLLVM.sh
src/: AST.cpp  ASTBuilder.cpp  ASTPass.cpp  CMakeLists.txt  CodeGenPass.cpp  DefRef.cpp  FunctionErrorPass.cpp  Scope.cpp  Symbol.cpp  main.cpp
src/ASTNodes/: AssignStatement.cpp  AtomNodes.cpp  BinaryExpr.cpp  Block.cpp  BuiltInCall.cpp  ConditionStatement.cpp  DeclareStatement.cpp  DomainExpr.cpp  ExtraLeafNodes.cpp  FileNode.cpp  FilterExpr.cpp  FunctionNodes.cpp  GeneratorExpr.cpp  IdNode.cpp  Loop.cpp  ProcedureCall.cpp  ProcedureDecl.cpp  ProcedureParam.cpp  Stream.cpp  TupleType.cpp  TypeCast.cpp  TypeDef.cpp  TypeNode.cpp  UnaryExpr.cpp
tests/: GazpreaConfig.json
tests/inStream/name/: input.ins
tests/input/name/assignments/: inferred_assignments.in  matrix_assignments.in  scalar_assignments.in  vector_assignments.in
tests/input/name/binary_operations/: matrix_binary.in  scalar_binary.in  vector_binary1.in  vector_binary2.in
tests/input/name/declarations/: array_declarations.in  floating_points.in  globals.in  inferred_declarations.in  scalar_declarations.in
tests/input/name/functions/: builtin.in  complex_returns.in  decl_functions.in
tests/input/name/if_statements/: condition.in
tests/input/name/loops/: double_loop.in  infinite_loop.in  iterator_loop.in  post_predicate.in
tests/input/name/others/: array_promotion.in  blocks.in  comments.in  filters.in  generators.in  identifier.in  scalar_promotion.in  special_index.in  typedef.in
tests/input/name/procedures/: decl_procedures.in
tests/input/name/stream/: output_array.in  output_literals.in  output_scalars.in
tests/input/name/type_casting/: matrix_casting.in  scalar_casting.in  tuple_casting.in  vector_casting.in
tests/input/name/unary_operations/: array_unary.in  scalar_unary.in
tests/output/name/assignments/: inferred_assignments.out  matrix_assignments.out  vector_assignments.out
tests/output/name/binary_operations/: matrix_binary.out  scalar_binary.out  vector_binary1.out  vector_binary2.out
tests/output/name/declarations/: floating_points.out  inferred_declarations.out  scalar_declarations.out
tests/output/name/functions/: decl_functions.out
tests/output/name/if_statements/: condition.out
tests/output/name/loops/: iterator_loop.out  post_predicate.out
tests/output/name/others/: generators.out  typedef.out
tests/output/name/stream/: output_array.out  output_literals.out  output_scalars.out  output_variables.out
tests/output/name/type_casting/: scalar_casting.out
tests/output/name/unary_operations/: array_unary.out  scalar_unary.out
